enabled Full Site Editing

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,16 @@
+/*
+Theme Name: My Custom Theme
+Theme URI: http://example.com/my-custom-theme
+Author: Your Name
+Author URI: http://example.com
+Description: A custom WordPress theme created for practice.
+Version: 1.0
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Tags: custom, theme, development
+Text Domain: my-custom-theme
+*/
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
